# GutMiScholar

./: README.md  docker-compose.yml  start.sh  stop.sh
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  development.sh  pyproject.toml
backend/src/: app.py  config.py  llm_factory.py  prompts.py
backend/src/controllers/: chat_controller.py  selection_controller.py
backend/src/eval/: consolidated_eval_results.py  eval_mcq.py  eval_open_ended_ragas.py  eval_score_distribution.py  new.py  process_json_dataset.py  process_json_dataset_old.py  rag_mcq.py  rag_open_ended.py  ragas_analysis.py  ragas_report.html  ragas_report_new_v0.html  summarize_mcq_ragas.py  summarize_open_ended_ragas.py
backend/src/eval/Eval_Data/: 1-Introduction to the human gut microbiota.json  10-Microbiome and metabolome features in inflammatory bowel disease via multi-omics integration analyses across cohorts.json  100-New_insights_from_uncultivated_genomes_of_the_global_human_gut_microbiome.json  11-Microbiota in inflammatory bowel disease.json  12-Gut microbiota analyses of inflammatory bowel diseases.json  3-Human gut microbiota.json  (+94 more)
backend/src/models/: __init__.py  requests.py
backend/src/orchestrators/: chat_orchestrator.py
backend/src/routers/: chat.py  collections.py  memory.py  metadata.py  search.py  selection.py
backend/src/services/: chat_service.py  collection_manager.py  dependencies.py  document_processor.py  memory_service.py  metadata_service.py  pdf_selection_service.py  pdf_storage_service.py  query_classifier.py  reranker_factory.py  retrieval_service.py
(+47 files in other folders)
