[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb==1.0.21",
    "fastapi==0.116.1",
    "httpx==0.28.1",
    "langchain==0.3.27",
    "langchain-chroma==0.2.6",
    "langchain-google-genai==2.1.10",
    "langchain-groq==0.3.8",
    "langchain-huggingface==0.3.1",
    "langchain-ollama==0.3.10",
    "numpy==2.3.3",
    "pandas==2.3.3",
    "pydantic==2.11.9",
    "pymupdf==1.26.4",
    "python-dotenv==1.1.1",
    "python-multipart==0.0.20",
    "ragas==0.4.2",
    "sentence-transformers==5.1.0",
    "uvicorn==0.35.0",
]
